fixed text align on search results

--- a/frontend/src/components/Search/Results/SearchResults.module.css
+++ b/frontend/src/components/Search/Results/SearchResults.module.css
@@ -67,6 +67,7 @@
 	align-items: center;
 	width: 400px;
 	background-color: white;
+	text-align: center;
 }
 
 .city {
